Automatically patch field type changes for predefined fixers